@@ -27,9 +27,9 @@ AM_CONFIG_HEADER([MHD_config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AH_TOP([#define _GNU_SOURCE  1])
 
-LIB_VERSION_CURRENT=15
+LIB_VERSION_CURRENT=16
 LIB_VERSION_REVISION=0
-LIB_VERSION_AGE=5
+LIB_VERSION_AGE=6
 AC_SUBST(LIB_VERSION_CURRENT)
 AC_SUBST(LIB_VERSION_REVISION)
 AC_SUBST(LIB_VERSION_AGE)
