@@ -3,8 +3,8 @@
 @setfilename microhttpd-tutorial.info
 @set UPDATED 28 Feb 2010
 @set UPDATED-MONTH Feb 2010
-@set EDITION 0.9.7
-@set VERSION 0.9.7
+@set EDITION 0.9.8
+@set VERSION 0.9.8
 @settitle A tutorial for GNU libmicrohttpd
 
 @dircategory GNU Libraries
